--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
@@ -155,7 +155,10 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Scripts\main.js" />
+    <Content Include="styles\style.css" />
     <Content Include="styles\WishPage.css" />
+    <Content Include="WebForm3.aspx" />
     <Content Include="WishPage.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -254,6 +257,12 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm3.aspx.cs">
+      <DependentUpon>WebForm3.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm3.aspx.designer.cs">
+      <DependentUpon>WebForm3.aspx</DependentUpon>
     </Compile>
     <Compile Include="WishPage.aspx.cs">
       <DependentUpon>WishPage.aspx</DependentUpon>
