--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
@@ -103,8 +103,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
-    <None Include="Admin\AdminPage.Master" />
-    <Content Include="Admin\DormitoryRoom.aspx" />
+    <Content Include="Admin\Admin.Master" />
+    <Content Include="Admin\Room.aspx" />
+    <Content Include="Admin\RoomList.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -157,6 +158,7 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="styles\admin\Admin.css" />
     <Content Include="styles\WishPage.css" />
     <Content Include="WishPage.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -195,19 +197,26 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin\AdminPage.Master.cs">
-      <DependentUpon>AdminPage.Master</DependentUpon>
+    <Compile Include="Admin\Admin.Master.cs">
+      <DependentUpon>Admin.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Admin\AdminPage.Master.designer.cs">
-      <DependentUpon>AdminPage.Master</DependentUpon>
+    <Compile Include="Admin\Admin.Master.designer.cs">
+      <DependentUpon>Admin.Master</DependentUpon>
     </Compile>
-    <Compile Include="Admin\DormitoryRoom.aspx.cs">
-      <DependentUpon>DormitoryRoom.aspx</DependentUpon>
+    <Compile Include="Admin\Room.aspx.cs">
+      <DependentUpon>Room.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Admin\DormitoryRoom.aspx.designer.cs">
-      <DependentUpon>DormitoryRoom.aspx</DependentUpon>
+    <Compile Include="Admin\Room.aspx.designer.cs">
+      <DependentUpon>Room.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\RoomList.aspx.cs">
+      <DependentUpon>RoomList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\RoomList.aspx.designer.cs">
+      <DependentUpon>RoomList.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
