--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
@@ -108,6 +108,7 @@
     <Content Include="Admin\BookType.aspx" />
     <Content Include="Admin\Room.aspx" />
     <Content Include="Admin\RoomList.aspx" />
+    <Content Include="Admin\StudentList.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -233,6 +234,13 @@
     </Compile>
     <Compile Include="Admin\RoomList.aspx.designer.cs">
       <DependentUpon>RoomList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\StudentList.aspx.cs">
+      <DependentUpon>StudentList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\StudentList.aspx.designer.cs">
+      <DependentUpon>StudentList.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
