--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/XDPTPM-01-NHOM04-DOAN-HK2-23-24.csproj
@@ -165,6 +165,7 @@
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Scripts\WebForms\HomePage.js" />
     <Content Include="styles\admin\Admin.css" />
+    <Content Include="styles\Contact.css" />
     <Content Include="styles\WishPage.css" />
     <Content Include="WishPage.aspx" />
     <Content Include="Home.Master" />
