db helper, first show data

--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Web.config
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Web.config
@@ -16,6 +16,9 @@
       </controls>
     </pages>
   </system.web>
+    <connectionStrings>
+	    <add name="DefaultConnection" connectionString="Data Source=MSIHOANG\SQL;Initial Catalog=dormitory_db;Integrated Security=True" providerName="System.Data.SqlClient" />
+    </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
