cap nhat quan ly sinh vien p1

--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Web.config
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Web.config
@@ -17,7 +17,7 @@
     </pages>
   </system.web>
     <connectionStrings>
-	    <add name="DefaultConnection" connectionString="Data Source=MSIHOANG\SQL;Initial Catalog=dormitory_db;Integrated Security=True" providerName="System.Data.SqlClient" />
+	    <add name="DefaultConnection" connectionString="Data Source=HUNG123\SQLEXPRESS;Initial Catalog=Dormitory;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
